--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -24,6 +24,8 @@ CSS
     border-radius: 5px;
     text-align: center;
     color: black;
+    margin-block-start: 10%;
+    width: 80%;
   }
 
   #close-btn {
