--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -24,8 +24,9 @@ CSS
     border-radius: 5px;
     text-align: center;
     color: black;
-    margin-block-start: 5%;
-    width: 80%;
+    max-width: 90%;
+    max-height: 90%;
+    overflow: auto;
   }
 
   #close-btn {
