--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -14,7 +14,7 @@ CSS
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
     justify-content: center;
-    align-items: center;
+    align-items: start;
 
   }
 
@@ -27,6 +27,7 @@ CSS
     max-width: 90%;
     max-height: 90%;
     overflow: auto;
+    margin-block-start: 30%;
   }
 
   #close-btn {
