--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -28,8 +28,10 @@ CSS
     border-radius: 5px;
     text-align: center;
     color: black;
-    max-width: 90%;
+    max-width: 80%;
     max-height: 90%;
+    height: 65%;
+    margin-block-start: 10%;
     overflow: auto;
   }
 
