--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -20,6 +20,7 @@ CSS
   @media only screen and (max-width: 600px) {
     .popup-content {
       margin-block-start: 30%;
+      max-width: 90%;
     }
   }
   .popup-content {
