--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -5,6 +5,17 @@
 CSS
 ------------------------------------------------------------------------------------------------------------------------
 {%- endcomment -%}{% style %}
+
+  .header {
+    position: relative;
+    z-index: 100;
+  }
+
+  .shopify-section--footer,
+  .footer {
+    position: relative;
+    z-index: 100;
+  }
   .popup {
     position: fixed;
     top: 0;
