--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -11,8 +11,7 @@ CSS
     z-index: 100;
   }
 
-  .shopify-section--footer,
-  .footer {
+  footer#shopify-section-sections--19505436885298__footer {
     position: relative;
     z-index: 100;
   }
