--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -25,6 +25,8 @@ CSS
     display: none;
     justify-content: center;
     align-items: start;
+    z-index: 999;
+    overflow: hidden;
 
   }
   @media only screen and (max-width: 600px) {
