--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -11,6 +11,10 @@ CSS
     z-index: 100;
   }
 
+  div#popup {
+    margin-block-start: 0;
+  }
+
   footer#shopify-section-sections--19505436885298__footer {
     position: relative;
     z-index: 100;
