--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -40,7 +40,7 @@ CSS
   }
   .popup-content {
     background-color: #fff;
-    padding: 20px;
+    padding: 0 20px 20px;
     border-radius: 5px;
     text-align: center;
     color: black;
