--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -231,9 +231,9 @@ LIQUID
 
             <div id="popup" class="popup">
               <div class="popup-content">
-                <h1 class="popup-title">
+                <p class="popup-title">
                   {%- if block.settings.title != blank -%}
-                  </h1>
+                  </p>
                   <p class="h2">
                     {%- render 'styled-text', content: block.settings.title, gradient: block.settings.text_gradient -%}
                   </p>
