--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -233,14 +233,12 @@ LIQUID
             {% endcomment %}
             <button id="popup-trigger">Click here to open the popup</button>
 
-<div id="popup" class="popup">
+            <div id="popup" class="popup">
               <div class="popup-content">
-                <div style="
-    text-align: end;
-">
-                <a href="#" id="close-btn">Close</a>
+                <div style="text-align: end;">
+                  <a href="#" id="close-btn">Close</a>
                 </div>
-                  
+
                 {{- block.settings.content -}}
                 <a href="#" id="close-btn">Close</a>
               </div>
